# realestate_eg

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
realestate_eg/: hooks.py  modules.txt  patches.txt  setup.py
realestate_eg/api/: banking_integration.py  digital_signature.py  eta_integration.py  gis_service.py  iot_integration.py  ocr_service.py  payment_gateway.py  sms_gateway.py  whatsapp_integration.py
realestate_eg/cancellation_and_refund/doctype/refund_schedule/: refund_schedule.js  refund_schedule.json  refund_schedule.py
realestate_eg/cancellation_and_refund/doctype/unit_cancellation/: unit_cancellation.js  unit_cancellation.json  unit_cancellation.py
realestate_eg/config/: desktop.py
realestate_eg/construction_management/doctype/construction_milestone/: construction_milestone.js  construction_milestone.json  construction_milestone.py
realestate_eg/construction_management/doctype/contractor/: contractor.js  (+2 more)
realestate_eg/overrides/: __init__.py  customer.py  payment_entry.py  sales_invoice.py
realestate_eg/patches/v1_0/: create_default_accounts.py  setup_default_settings.py  setup_notification_templates.py
realestate_eg/project_structure/doctype/: __init__.py
realestate_eg/public/css/: realestate_eg.css
realestate_eg/public/js/: realestate_eg.js
realestate_eg/templates/emails/: installment_reminder.html  lease_expiry_alert.html
realestate_eg/utils/: cancellation_engine.py  cost_allocation.py  installment_calculator.py  pdc_lifecycle.py  penalty_engine.py  rental_law_engine.py  tax_utils.py
(+112 files in other folders)
