[metadata]
name = realestate_eg
version = 1.0.0
description = Comprehensive Real Estate & Installment Management for the Egyptian Market
long_description = file: README.md
long_description_content_type = text/markdown
author = Nest Software Development
author_email = info@nsd-eg.com
license = MIT

[options]
packages = find:
python_requires = >=3.12
